<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Places"
    tools:showIn="@layout/activity_places">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >


<!--        <TextView-->
<!--            android:id="@+id/textView2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="sans-serif-black"-->
<!--            android:text="Select a place"-->
<!--            android:textColor="@color/colorPrimaryText"-->
<!--            android:textSize="24sp"-->
<!--            android:textAlignment=""-->
<!--            android:layout_marginTop="13dp"/>-->

<!--        <View-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:background="@color/colorDivider" />-->


        <ImageView
            android:id="@+id/kandy"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/kandy"
            app:srcCompat="@color/colorAccent"
            tools:srcCompat="@drawable/kandy" />


        <Button
            android:id="@+id/kandy1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_height"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="-200dp"
            android:alpha="0.5"
            android:background="@color/colorPrimaryText"
            android:textSize="25dp"
            android:onClick="@string/kandy"
            android:text="@string/kandy"
            android:textColor="@color/colorText" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@color/colorDivider" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/galle"
            app:srcCompat="@color/colorAccent"
            tools:srcCompat="@drawable/galle" />

            <Button
                android:id="@+id/galle"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="-200dp"
                android:alpha="0.5"
                android:textSize="25dp"
                android:background="@color/colorPrimaryText"
                android:onClick="@string/galle"
                android:text="@string/galle"
                android:textColor="@color/colorText" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorDivider" />

        <ImageView
            android:id="@+id/rathna"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/rathna"
            app:srcCompat="@color/colorAccent"
            android:layout_marginTop="-53dp"
            tools:srcCompat="@drawable/rathna" />

            <Button
                android:id="@+id/btnRathnapura"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="-200dp"
                android:alpha="0.5"
                android:background="@color/colorPrimaryText"
                android:textSize="25dp"
                android:onClick="@string/rathna"
                android:text="@string/rathna"
                android:textColor="@color/colorText" />

            <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="60dp"
            android:background="@color/colorDivider" />

        <ImageView
            android:id="@+id/jaffna"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/jaffna"
            app:srcCompat="@color/colorAccent"
            android:layout_marginTop="-63dp"
            tools:srcCompat="@drawable/jaffna" />

        <Button
            android:id="@+id/btnJffna"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="-200dp"
            android:alpha="0.5"
            android:background="@color/colorPrimaryText"
            android:textSize="25dp"
            android:onClick="@string/jaffna"
            android:text="@string/jaffna"
            android:textColor="@color/colorText" />



    </LinearLayout>
</androidx.core.widget.NestedScrollView>