<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HotelBookingDetailEdit">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_forum_black_24dp"
        android:text=" Edit Your Details"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:text="Name"
        android:textColor="@color/colorPrimaryText" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-30dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="Days"
        android:textColor="@color/colorPrimaryText" />
    <EditText
        android:id="@+id/umail"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-30dp"
        android:ems="10"
        android:inputType="textPersonName" />
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/e_mail"
        android:textColor="@color/colorPrimaryText" />
    <EditText
        android:id="@+id/udays"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-30dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="Rooms"
        android:textColor="@color/colorPrimaryText" />

    <EditText
        android:id="@+id/urooms"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-30dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="Phone Number"
        android:textColor="@color/colorPrimaryText" />

    <EditText
        android:id="@+id/uphone"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="-30dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_shape"
        android:onClick="@string/save"
        android:text="@string/save"
        android:textColor="@color/colorText" />

    <Button
        android:id="@+id/cans"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:text="@string/confirm"
        android:textColor="@color/colorText" />


</LinearLayout>