<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="166dp"
        android:layout_height="175dp"
        android:layout_marginTop="120dp"
        app:srcCompat="@drawable/driver1" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="140dp"
        android:text="@string/guideName"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textViewDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="160dp"
        android:padding="@dimen/nav_header_vertical_spacing"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="180dp"
        android:padding="@dimen/nav_header_vertical_spacing"/>

    <TextView
        android:id="@+id/textViewContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="200dp"
        android:padding="@dimen/nav_header_vertical_spacing"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="235dp"
        android:background="@drawable/button_shape"
        android:onClick="@string/search"
        android:text="@string/search"
        android:textColor="@color/colorText" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="171dp"
        android:layout_height="150dp"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="38dp"
        app:srcCompat="@drawable/driver2" />

    <TextView
        android:id="@+id/textView337"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="340dp"
        android:text="Sandaruwan"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="360dp"
        android:padding="@dimen/nav_header_vertical_spacing"
        android:text="i have two years experiance" />

    <TextView
        android:id="@+id/textViewEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="380dp"
        android:padding="@dimen/nav_header_vertical_spacing"
        android:text="sandaruwan@gmail.com" />

    <TextView
        android:id="@+id/textViewContact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="400dp"
        android:padding="@dimen/nav_header_vertical_spacing"
        android:text="07754343234" />

    <Button
        android:id="@+id/btnSearch2"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="435dp"
        android:background="@drawable/button_shape"
        android:text="Search"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="true"
        android:text="@string/guide"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        android:drawableLeft="@drawable/ic_store_mall_directory_black_24dp"/>


    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

</RelativeLayout>